WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164846
[SVG -> OTF Font Converter] Fonts advances are not internally consistent inside the generated font file
https://bugs.webkit.org/show_bug.cgi?id=164846
Summary
[SVG -> OTF Font Converter] Fonts advances are not internally consistent insi...
Myles C. Maxfield
Reported
2016-11-16 17:31:54 PST
[SVG -> OTF Font Converter]
Attachments
Patch
(49.18 KB, patch)
2016-11-16 17:33 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(1.37 MB, application/zip)
2016-11-16 18:34 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews101 for mac-yosemite
(1.37 MB, application/zip)
2016-11-16 18:38 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(1.89 MB, application/zip)
2016-11-16 18:40 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews126 for ios-simulator-wk2
(10.56 MB, application/zip)
2016-11-16 18:48 PST
,
Build Bot
no flags
Details
Patch
(150.12 KB, patch)
2016-11-17 19:06 PST
,
Myles C. Maxfield
darin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(1.37 MB, application/zip)
2016-11-17 19:44 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(1.74 MB, application/zip)
2016-11-17 20:13 PST
,
Build Bot
no flags
Details
Patch for committing
(133.99 KB, patch)
2016-11-18 09:46 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-11-16 17:33:27 PST
Created
attachment 295004
[details]
Patch
Myles C. Maxfield
Comment 2
2016-11-16 17:34:11 PST
<
rdar://problem/29031509
>
Build Bot
Comment 3
2016-11-16 18:34:26 PST
Comment on
attachment 295004
[details]
Patch
Attachment 295004
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2528635
New failing tests: svg/W3C-SVG-1.1/text-intro-03-b.svg
Build Bot
Comment 4
2016-11-16 18:34:29 PST
Created
attachment 295009
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-11-16 18:38:41 PST
Comment on
attachment 295004
[details]
Patch
Attachment 295004
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2528666
New failing tests: svg/W3C-SVG-1.1/fonts-elem-04-b.svg svg/W3C-SVG-1.1/text-intro-03-b.svg
Build Bot
Comment 6
2016-11-16 18:38:44 PST
Created
attachment 295011
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-11-16 18:40:34 PST
Comment on
attachment 295004
[details]
Patch
Attachment 295004
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2528642
New failing tests: svg/W3C-SVG-1.1/fonts-elem-04-b.svg svg/W3C-SVG-1.1/text-intro-03-b.svg
Build Bot
Comment 8
2016-11-16 18:40:37 PST
Created
attachment 295012
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-11-16 18:47:57 PST
Comment on
attachment 295004
[details]
Patch
Attachment 295004
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2528650
New failing tests: svg/batik/text/textPosition2.svg svg/batik/text/textEffect3.svg svg/W3C-SVG-1.1/fonts-elem-02-t.svg svg/W3C-SVG-1.1/text-intro-03-b.svg svg/W3C-SVG-1.1/text-intro-04-t.svg svg/W3C-SVG-1.1/fonts-elem-01-t.svg svg/W3C-SVG-1.1/text-intro-02-b.svg svg/W3C-SVG-1.1/fonts-elem-07-b.svg svg/W3C-SVG-1.1/fonts-elem-04-b.svg svg/W3C-SVG-1.1/text-intro-01-t.svg svg/batik/text/textEffect.svg svg/W3C-SVG-1.1/fonts-elem-03-b.svg
Build Bot
Comment 10
2016-11-16 18:48:00 PST
Created
attachment 295013
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 11
2016-11-17 19:06:08 PST
Created
attachment 295120
[details]
Patch
Build Bot
Comment 12
2016-11-17 19:44:01 PST
Comment on
attachment 295120
[details]
Patch
Attachment 295120
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2534676
New failing tests: svg/W3C-SVG-1.1/fonts-elem-04-b.svg
Build Bot
Comment 13
2016-11-17 19:44:05 PST
Created
attachment 295127
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Darin Adler
Comment 14
2016-11-17 20:10:58 PST
Comment on
attachment 295120
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295120&action=review
> Source/WebCore/svg/SVGToOTFFontConversion.cpp:1152 > + writeCFFEncodedNumber(m_cffData, std::floor(width)); // hmtx table can't encode fractional FUnit values, and the CFF table needs to agree with hmtx.
How did you decide on floor rather than round?
Build Bot
Comment 15
2016-11-17 20:13:41 PST
Comment on
attachment 295120
[details]
Patch
Attachment 295120
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2534790
New failing tests: svg/W3C-SVG-1.1/fonts-elem-04-b.svg
Build Bot
Comment 16
2016-11-17 20:13:45 PST
Created
attachment 295130
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 17
2016-11-18 09:41:30 PST
Comment on
attachment 295120
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295120&action=review
>> Source/WebCore/svg/SVGToOTFFontConversion.cpp:1152 >> + writeCFFEncodedNumber(m_cffData, std::floor(width)); // hmtx table can't encode fractional FUnit values, and the CFF table needs to agree with hmtx. > > How did you decide on floor rather than round?
appendHMTXTable() uses clampTo() which has this behavior.
Myles C. Maxfield
Comment 18
2016-11-18 09:46:36 PST
Created
attachment 295162
[details]
Patch for committing
WebKit Commit Bot
Comment 19
2016-11-18 12:27:59 PST
Comment on
attachment 295162
[details]
Patch for committing Clearing flags on attachment: 295162 Committed
r208888
: <
http://trac.webkit.org/changeset/208888
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug