[SVG -> OTF Font Converter] Fonts advances are not internally consistent inside the generated font file https://bugs.webkit.org/show_bug.cgi?id=164846 <rdar://problem/29031509>

Reviewed by Darin Adler.

Source/WebCore:

The fonts I'm generating in the SVG -> OTF converter have fractional FUnit values for their advances.
The CFF table can encode that, but hmtx can't, which means the font isn't internally consistent.

Covered by existing tests.

* svg/SVGToOTFFontConversion.cpp:

LayoutTests:

* platform/ios-simulator/svg/W3C-SVG-1.1/fonts-elem-01-t-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/fonts-elem-02-t-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/fonts-elem-03-b-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/fonts-elem-04-b-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/fonts-elem-07-b-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/text-intro-01-t-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/text-intro-02-b-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/text-intro-03-b-expected.txt:
* platform/ios-simulator/svg/W3C-SVG-1.1/text-intro-04-t-expected.txt:
* platform/ios-simulator/svg/batik/text/textEffect-expected.txt:
* platform/ios-simulator/svg/batik/text/textEffect3-expected.txt:
* platform/ios-simulator/svg/batik/text/textPosition2-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/fonts-elem-01-t-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/fonts-elem-02-t-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/fonts-elem-03-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/fonts-elem-04-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/fonts-elem-07-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/text-intro-01-t-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/text-intro-02-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/text-intro-03-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/text-intro-04-t-expected.txt:
* platform/mac/svg/batik/text/textEffect3-expected.txt:
* platform/mac/svg/batik/text/textPosition2-expected.txt:
* platform/mac/svg/custom/svg-fonts-fallback-expected.txt:
* platform/mac/svg/wicd/test-rightsizing-b-expected.txt:
* svg/W3C-SVG-1.1/fonts-elem-04-b-expected.txt:


Canonical link: https://commits.webkit.org/182599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208888 268f45cc-cd09-0410-ab3c-d52691b4dbfc